--- a/main.ui
+++ b/main.ui
@@ -46,8 +46,9 @@
     <property name="title">
      <string>&amp;File</string>
     </property>
-    <addaction name="actionBrowse"/>
+    <addaction name="action_Refresh"/>
     <addaction name="action_Edit"/>
+    <addaction name="actionBrowse"/>
     <addaction name="separator"/>
     <addaction name="action_Exit"/>
    </widget>
@@ -82,33 +83,91 @@
     <bool>false</bool>
    </attribute>
    <addaction name="actionBrowse"/>
+   <addaction name="action_Back"/>
+   <addaction name="action_Refresh"/>
    <addaction name="actionHome"/>
    <addaction name="action_Edit"/>
    <addaction name="action_Exit"/>
   </widget>
   <action name="action_About">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/help-about.png</normaloff>images/help-about.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;About</string>
    </property>
   </action>
   <action name="action_Exit">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/application-exit.png</normaloff>images/application-exit.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Quit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+Q</string>
+   </property>
   </action>
   <action name="actionBrowse">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/document-open-folder.png</normaloff>images/document-open-folder.png</iconset>
+   </property>
    <property name="text">
     <string>Browse</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+B</string>
+   </property>
   </action>
   <action name="action_Edit">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/document-edit.png</normaloff>images/document-edit.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Edit</string>
    </property>
+   <property name="shortcut">
+    <string>Ctrl+E</string>
+   </property>
   </action>
   <action name="actionHome">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/go-home.png</normaloff>images/go-home.png</iconset>
+   </property>
    <property name="text">
     <string>&amp;Home</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+H</string>
+   </property>
+  </action>
+  <action name="action_Back">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/go-previous.png</normaloff>images/go-previous.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Back</string>
+   </property>
+   <property name="shortcut">
+    <string>Backspace</string>
+   </property>
+  </action>
+  <action name="action_Refresh">
+   <property name="icon">
+    <iconset>
+     <normaloff>images/view-refresh.png</normaloff>images/view-refresh.png</iconset>
+   </property>
+   <property name="text">
+    <string>&amp;Refresh</string>
+   </property>
+   <property name="shortcut">
+    <string>Ctrl+R</string>
    </property>
   </action>
  </widget>
